# Contract

./: -  .coverage  .env.example  .flake8  .replit  ARCHITECTURE.md  CODE_STRUCTURE.md  COMPLETE_PR_PACKAGE.md  COMPREHENSIVE_DASHBOARD_IMPLEMENTATION_PROMPT.md  CORRECTED_GITHUB_PUSH.md  DEPLOYMENT_STATUS.md  DS.py  EMERGENCY_PR_GUIDE.md  FINAL_PR_SOLUTION_22_22.md  FORK_SYNC_SOLUTION.md  GITHUB_PULL_REQUEST_FIX.md  GITHUB_PUSH_GUIDE.md  PATCH_SUMMARY_REPORT.md  PULL_REQUEST_SOLUTION.md  README.md  SECURITY_REVIEW.md  UI_CONSISTENCY_ANALYSIS.md  UI_FIXES_IMPLEMENTATION.md  URGENT_PR_SOLUTION.md  advanced_resource_manager.py  agentFixDashboard.py  ai_brain_architecture.json  app.py  appPatch.py  architecture.md  bimserver_api.html  button_response_optimization.py  code_check.py  contracts.json  criticalErrorsFix.py  critical_dashboard_fix.py  daodiseo_patch_report.json  dashboard_comprehensive_fix.py  dashboard_pixel_perfect_fix.py  emergency_pr_creator.py  (+31 more)
Contract/: brand_ux_fixer.py  main.py  replit.nix  uxer.py  uxer_improved.py
attached_assets/: Pasted--2025-03-23-14-01-44-515-DEBUG-in-upload-controller-Received-roles-owner-contributor-vali-1742738904857.txt  Pasted--2025-03-23-14-18-33-580-DEBUG-in-contract-controller-Fetching-contracts-172-31-128-21-23-Mar-1742739526682.txt  Pasted--DASHBOARD-PATCH-REPORT-Generated-2025-06-10-21-40-59-FIXES-APPLIED-6--1749591736584_1749591736587.txt  Pasted--Debug-mode-on-WARNING-This-is-a-development-server-Do-not-use-it-in-a-production-deployment-U-1742736780765.txt  (+161 more)
scripts/: ui_consistency_patch.py  ui_validation.py
(+295 files in other folders)
