[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator==2.2.0",
    "flask-login>=0.6.3",
    "flask==3.1.0",
    "flask-sqlalchemy==3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-wtf>=1.2.2",
    "cosmpy==0.9.0",
    "twilio>=9.5.1",
    "grpcio==1.51.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "openai-agents>=0.0.8",
    "ifcopenshell>=0.8.2",
    "flake8>=7.2.0",
    "python-dotenv>=1.1.0",
    "openai>=1.71.0",
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
